# cmake_learning_project

./: .gitignore  CMAKE_TUTORIAL.md  CMAKE_基础命令讲解.md  CMAKE_语法速查手册.md  CMakeLists.txt  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  config.h.in  交叉编译入门指南.md  开始学习.md  编译选项与构建工具速览.md  进阶学习路线.md
apps/: CMakeLists.txt  calculator_app.cpp  simple_demo.cpp
include/mathlib/: calculator.h  geometry.h  statistics.h
include/stringlib/: stringutils.h
src/mathlib/: CMakeLists.txt  calculator.cpp  geometry.cpp  statistics.cpp
src/stringlib/: CMakeLists.txt  stringutils.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_statistics.cpp  test_stringutils.cpp
